--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,7 @@
 body{
     background-image: url(../images/bg2.jpg);
     background-size: 100%;
+    background-repeat: no-repeat;
 }
 a{
     text-decoration: none;
@@ -63,11 +64,17 @@ nav{
 }
 /*上面是nav*/
  
-.contain .contain-ad{
+.contain{
     width: 1500px;
     height: 800px;
     margin-left: 0;
     margin-right: 0;
+    position: relative;
+    display: table;
+}
+.contain-ad{
+    width: 1500px;
+    height: 800px;
     position: relative;
 }
 .contain .contain-ad::after{
@@ -75,13 +82,15 @@ nav{
     width: 100%;
     height: 100%;
     position: relative;
-    top: 110px;
-    z-index: -1;
+    top: -100px;
+    z-index: -99;
     left: 0;
+    margin: 220px;
     display: block;
     background-image:url(../images/bg3.jpg);
     background-size: cover;
     opacity: 0.6;
+    display: flex;
 }
 .contain-ad div:nth-child(3){
     animation: run 12s  linear infinite;
@@ -97,8 +106,8 @@ nav{
 }
 .contain-ad div{
     position: absolute;
-    top: 140px;
-    left: 25%;
+    top: -70px;
+    left: 40%;
     opacity: 0;
 }
 .contain-ad div img{
@@ -148,11 +157,9 @@ element.style {
 }
 .contain .contain-sale {
     width: 80%;
-    margin-top: 170px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 330px;
+    margin-right: 300px;
     border: rgb(132, 166, 239) 5px dashed;
-    text-align: center;
 }
 table{
     margin-left: auto;
