--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -68,13 +68,13 @@ td {
 
 }
 .table {
-    width: 1000px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
     color: #6c5d4e;
     border-spacing: 5px;
-    border: rgb(227, 169, 83) 5px dashed;
+    /*border:rgb(227, 169, 83) 5px dashed;*/
 }
 tr {
     height: 60px;
@@ -83,29 +83,28 @@ td{
     text-align: center;
 }
 .table-name{
-    width: 500px;
     font-size: 35px;
 }
 .table-txt{
-    width: 500px;
+    /*width: 500px;*/
     font-size: 35px;
 }
 .table-amount{
-    width: 50px;
+    /*width: 50px;*/
     height: 60px;
     text-align: center;
     font-size: 35px;
 }
 
 .table-price{
-    width: 130px;
+    /*width: 130px;*/
     height: 60px;
     text-align: center;
     font-size: 35px;
 }
 
 .table-total{
-    width: 130px;
+    /*width: 130px;*/
     height: 60px;
     text-align: center;
     font-size: 35px;
@@ -120,8 +119,35 @@ td{
     background-color: #8e6d52;
     color: white;
     font-size: 25px;
+    width: 200px;
 }
 .item-cart-img:hover{
     background-color: rgb(234, 210, 145);
     color: #8e6d52;
+}
+.item-cart-btn{
+    background-color: #8e6d52;
+    color: white;
+    font-size: 25px;
+    width: 100px;
+}
+.item-cart-btn:hover{
+    background-color: rgb(234, 210, 145);
+    color: #8e6d52;
+}
+.num-button{
+    border: 1px solid lightgray;
+    width: 25px;
+    height: 35px;
+    cursor: pointer;
+    background-color: #c99d71;
+    color: white;
+}
+.number{
+    border: none;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    height: 35px;
+    width: 100px;
+    text-align: center;
 }
