--- a/assets/css/backstage.css
+++ b/assets/css/backstage.css
@@ -60,39 +60,59 @@ element.style {
     margin-left: 25px;
     padding: 20px;
 }
-p{
-    color: #6c5d4e;
-    padding: 15px;
-}
-.bord-img{
-    width: 55px;
-    height: 58px;
-    transition: 1s ease-in-out;
-}
-.bord-photo :hover{
-    -webkit-filter: opacity(50%);
-    filter: opacity(50%);
-}
-table{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 75px;
+section{
+    margin: auto;
+    margin-top: 200px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 100px;
     text-align: center;
-    border: rgb(227, 169, 83) 5px dashed;
-    border-spacing: 30px;
+    border: #b2a26e 5px dashed;
+    border-radius: 10px;
+    letter-spacing: 20px;
 }
-td{
-    width: 320px;
+.sale-glowIn span {
+    animation: glow-in 1.0s both;
+    animation-iteration-count : infinite;
+}
+.sale-glowIn{
     text-align: center;
+    line-height: 1.8;
+    font-family: Lora, serif;
+    display: block;
+    font-size: 40px;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    color: #824513
 }
-.pic{
-    width: 250px;
+@keyframes glow-in{
+    0% {
+        opacity: 0;
+    }
+    65% {
+        opacity: 1;
+        text-shadow: 0 0 25px white;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.7;
+    }
 }
-.bord-col img{
-    transform:scale(1,1);transition: all 1s ease-out;
+#additem,#reviseitem,#deleteitem,#orderdata,#memberdata{
+    background-color: #8e6d52;
+    color: white;
+    font-size: 20px;
+    width: 150px;
+    border-radius: 10px;
 }
-.bord-col :hover{
-
-    transform:rotateY(180deg);
-    border-radius: 50%;
+#additem:hover,#reviseitem:hover,#deleteitem:hover,
+#orderdata:hover,
+#memberdata:hover{
+    background-color: rgb(234, 210, 145);
+    color: #8e6d52;
 }
